--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -26,7 +26,7 @@
   font-size: 50px;
 }
 
-.MyPic {
+.ProfilePic {
   border-radius: 50%;
   display: block;
   margin-left: auto;
@@ -59,5 +59,3 @@
   display: table-cell;
   text-align: center;
 }
-
-
