Add the portfolio page (#2)
* Update the README.md file to describe the repo.

* Add basic portfolio page

* Make required code changes

* Change ids, TODO, JS function & comment

* Fix indentation, ids & JSDoc param

* Fix Js comments

* Map button id to description index & add role

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,61 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+.MainContainer {
+  background-color: gainsboro;
+  text-align: center;
 }
 
-#greeting-container {
-  margin-top: 20px;
+.Content {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Headline {
+  display: block;
+  text-align: center;
+}
+
+.Name {
+  display: inline;
+  font-family: 'GT America Extended',sans-serif;
+  font-weight: 800;
+  font-size: 50px;
+}
+
+.Hand {
+  display: inline;
+  font-weight: 800;
+  font-size: 50px;
+}
+
+.ProfilePic {
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
+.AboutMeText {
+  display: inline-block;
+  text-align: center;
+}
+
+.Bio {
+  margin: auto;
+  width: 50%;
+}
+
+.List {
+  list-style-position: inside;
+  text-align: center;
+}
+
+.Contact {
+  display: table;
+  table-layout: fixed;
+  width: 100%;   
+}
+
+.ContactSpan {
+  display: table-cell;
+  text-align: center;
 }
